Fix scrollbars on code blocks

--- a/css/main.css
+++ b/css/main.css
@@ -234,7 +234,8 @@ a:visited { color: #205caa; }
   -moz-border-radius: 3px;
   border-radius: 3px;
   font-size: 15px;
-  overflow:scroll;
+  overflow-y: hidden;
+  overflow-x: audo;
 }
 
 .post code { padding: 1px 5px; }
